@@ -1,3 +1,10 @@
+Thu, 29 Mar 2007 21:22:15 +0200 <thp@perli.net>
+        * src/gpodder/gpodder.py: Fixed a bug with empty podcast channels
+          that have not been detected right and could not be edited or 
+          deleted (thanks to Pieter De Decker (pdedecker gmail com) for 
+          pointing that out)
+        * bin/gpodder: Bumped version + release date
+
 Wed, 28 Mar 2007 04:27:06 +0200 <thp@perli.net>
         * TODO: Updated TODO list
 
